syntax = "proto3";
package user;

option go_package = "./proto/user;user";

service UserService {
  rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc UpdatePassword (UpdatePasswordRequest) returns (UpdatePasswordResponse) {}
}

message RegisterUserRequest {
  string Name = 1;
  string Surname = 2;
  string Patronymic = 3;
  string Email = 4;
  string Password = 5;
}

message RegisterUserResponse {
  string UserId = 1;
  string Error = 2;
}

message LoginRequest {
  string Email = 1;
  string Password = 2;
}

message LoginResponse {
  string UserId = 1;
  string Token = 2; // JWT токен
  string Role = 3;
  string Error = 4;
}

message user {
  int32 id = 1;
  string name = 2;
  string surname = 3;
  string patronymic = 4;
  string email = 5;
  string role = 6;
}

message UpdatePasswordRequest {
  string email = 1;
  string password = 2;
}

message UpdatePasswordResponse {
  string error = 1;
}